--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -97,3 +97,20 @@ body {
   justify-content: center;
   align-items: center;
   }
+
+  /* Estilos para el ícono de micrófono animado */
+.recording-icon {
+  font-size: 3rem; /* Tamaño del ícono */
+  animation: pulse 1s infinite; /* Animación pulsante */
+}
+
+/* Estilos para el ícono de micrófono cuando no se está grabando */
+.non-recording-icon {
+  font-size: 3rem; /* Tamaño del ícono */
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
