--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -112,3 +112,22 @@ body {
   50% { transform: scale(1.1); }
   100% { transform: scale(1); }
 }
+/* Estilos para centrar el contenido */
+.custom-content {
+  --ion-background-color: linear-gradient(#0505a0, #2095cf);
+  font-weight: bold;
+  text-shadow: 0 0 50px black;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-paragraph a {
+  color: blue; /* Cambia el color del enlace */
+  text-decoration: none; /* Subraya el enlace */
+  cursor: pointer; /* Cambia el cursor al pasar por encima */
+}
