Commit Final de codigo

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -138,6 +138,8 @@
     <audio *ngIf="audioRecorded" [src]="audioUrl" controls></audio>
 
     <!-- ... (código existente) ... -->
+    <p *ngIf="showLocationButton && audioRecorded">Todo listo, comparte tu ubicación para continuar</p>
+
     <ion-button
       *ngIf="showLocationButton && audioRecorded"
       (click)="getLocation()"
