--- a/src/app/new-emergency-alert/new-emergency-alert.component.html
+++ b/src/app/new-emergency-alert/new-emergency-alert.component.html
@@ -1,24 +1,36 @@
-<ion-header>
+<ion-header class="custom-header">
   <ion-toolbar>
-    <ion-title>Nueva Emergencia</ion-title>
+    <ion-buttons slot="end">
+      <ion-icon (click)="dismissModal()" name="close-circle" class="normal-icon"></ion-icon>
+    </ion-buttons>
+    <ion-title class="custom-title">¡Nueva Emergencia!</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
-  <p>El usuario {{ emergencyData.userName }} ha enviado una nueva emergencia</p>
+<ion-content class="custom-content">
+  <p><strong class="custom-strong">Usuario:</strong> {{ emergencyData.userName }} ha enviado una nueva emergencia</p>
   <div *ngIf="emergencyData">
-    <ion-card>
+    <ion-card class="custom-card">
+      <ion-card-header>
+        <ion-card-title>Detalles de la Emergencia</ion-card-title>
+      </ion-card-header>
       <ion-card-content>
-        <p>Fecha y hora: {{ emergencyData.timestamp }}</p>
-        <p>Ubicación: {{ emergencyData.location }}</p>
-        <img *ngIf="emergencyData.picture" [src]="emergencyData.picture" alt="Imagen de la emergencia">
-        <video *ngIf="emergencyData.video" controls>
-          <source [src]="emergencyData.video" type="video/mp4">
-          Tu navegador no admite la etiqueta de video.
-        </video>
-        <audio *ngIf="emergencyData.audio" controls>
-          <source [src]="emergencyData.audio" type="audio/mpeg">
-          Tu navegador no admite la etiqueta de audio.
-        </audio>
+        <p><strong class="custom-strong">Fecha y hora:</strong> {{ emergencyData.timestamp }}</p>
+        <p><strong class="custom-strong">Ubicación:</strong> <a [href]="emergencyData.location" target="_blank" class="custom-link">Ver Ubicación</a></p>
+        <img *ngIf="emergencyData.picture" [src]="emergencyData.picture" alt="Imagen de la emergencia" class="custom-image">
+        <div *ngIf="emergencyData.video">
+          <strong class="custom-strong">Video de la Emergencia:</strong>
+          <video controls class="custom-video">
+            <source [src]="emergencyData.video" type="video/mp4">
+            Tu navegador no admite la etiqueta de video.
+          </video>
+        </div>
+        <div *ngIf="emergencyData.audio">
+          <strong class="custom-strong">Audio de la Emergencia:</strong>
+          <audio controls class="custom-audio">
+            <source [src]="emergencyData.audio" type="audio/mpeg">
+            Tu navegador no admite la etiqueta de audio.
+          </audio>
+        </div>
       </ion-card-content>
     </ion-card>
   </div>
