--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+
+<app-splash *ngIf="isSplashScreenVisible"></app-splash>
+<router-outlet *ngIf="!isSplashScreenVisible"></router-outlet>
